Finalizando funções principais
